# fast-rag

./: Dockerfile  docker-compose.yml  pyproject.toml
src/: main.py
src/api/fastapi/: __init__.py
src/api/fastapi/v1/: __init__.py  query.py
src/use_cases/: query.py
